--- a/frontend/TodoFromScratch/app/src/main/res/values/colors.xml
+++ b/frontend/TodoFromScratch/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#FF03396C</color>
+    <color name="primary_container">#FFD7E3FF</color>
 </resources>
